# robot-homeguard

./: README.md
Ai-Engine/: .env.example  .gitignore  README.md  kt.py  main.py  mypy.ini  pyproject.toml  pytest.ini  requirements.txt
Ai-Engine/Examples/: 01_websocket_basic.py  02_websocket_handlers.py  README.md  testcam.py
Ai-Engine/config/: settings.py
Ai-Engine/docker/: .dockerignore  Dockerfile  Dockerfile.gpu  docker-compose.yml
Ai-Engine/docs/: API.md  ARCHITECTURE.md  DEPLOYMENT.md
Ai-Engine/runtest/: run  test_audio.py  test_camera.py  test_full_system.py  test_websocket.html
Ai-Engine/src/api/: routes.py  schemas.py
Ai-Engine/src/core/analytics/: __init__.py  anomaly_detector.py  pattern_recognizer.py  predictor.py  sensor_analyzer.py
Ai-Engine/src/core/audio/: __init__.py  audio_capture.py  noise_reducer.py  sound_classifier.py  speech_to_text.py  text_to_speech.py  voice_recognition.py
Ai-Engine/src/core/behavior/: __init__.py  behavior_engine.py  decision_maker.py  emotion_model.py  personality.py
Ai-Engine/src/core/nlp/: __init__.py  conversation_engine.py  entity_extractor.py  intent_classifler.py  llm_manager.py  sentiment_analyzer.py
Ai-Engine/src/core/vision/: README.MD  __init__.py  camera_manager.py  face_detector.py  face_recognizer.py  motion_detector.py  object_detector.py  pose_estimator.py  stream_camera.py
Ai-Engine/src/services/websocket/: __init__.py  client.py  message_handler.py  protocols.py
Ai-Engine/src/utils/: constants.py  logger.py
Ai-Engine/tests/: conftest.py
Ai-Engine/tests/integration/: test_websocket.py
Ai-Engine/tests/unit/: test_vision.py
Firmware/esp32/: platformio.ini
Firmware/esp32/include/: pins.h
Firmware/esp32/lib/: README
Firmware/esp32/lib/FlameSensor/: FlameSensor.cpp
Firmware/esp32/lib/Screen/: User_Setup.h
Firmware/esp32/lib/WebSocketClient/: WebSocketClient.cpp  WebSocketClient.h
Firmware/esp32/src/: robot.cpp  robot.h
homeguard-platform/: .env.production  .gitignore  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  turbo.json
homeguard-platform/.github/workflows/: ci-cd.yml
homeguard-platform/apps/api/: .env.example  package.json  tsconfig.json
homeguard-platform/apps/api/prisma/: schema.prisma  seed.ts
homeguard-platform/apps/api/src/: app.ts  index.ts
homeguard-platform/apps/api/src/config/: database.ts  redis.ts
homeguard-platform/apps/api/src/controllers/: auth.controller.ts  sensor.controller.ts
homeguard-platform/apps/api/src/middleware/: auth.middleware.ts  error.middleware.ts
homeguard-platform/apps/api/src/routes/: auth.routes.ts  index.ts  sensor.routes.ts
homeguard-platform/apps/api/src/services/: ai-engine.service.ts  esp32.service.ts
homeguard-platform/apps/api/src/utils/: logger.ts
homeguard-platform/apps/api/src/websocket/: ai-engine.handler.ts  client.handler.ts  esp32.handler.ts  index.ts  message-router.ts
homeguard-platform/apps/api/tests/integration/: websocket.test.ts
homeguard-platform/apps/web/: .env.local.example  next.config.js  package.json  tailwind.config.ts  tsconfig.json
homeguard-platform/apps/web/src/app/: layout.tsx  page.tsx
homeguard-platform/apps/web/src/app/(auth)/login/: page.tsx
homeguard-platform/apps/web/src/app/(dashboard)/: layout.tsx  page.tsx
homeguard-platform/apps/web/src/app/(dashboard)/camera/: page.tsx
homeguard-platform/apps/web/src/app/(dashboard)/logs/: page.tsx
homeguard-platform/apps/web/src/app/api/auth/[...nextauth]/: route.ts
homeguard-platform/apps/web/src/components/features/camera/: FaceRecognition.tsx  LiveStream.tsx
homeguard-platform/apps/web/src/components/features/robot/: RobotControl.tsx  RobotStatusCard.tsx
homeguard-platform/apps/web/src/components/features/sensors/: SensorCard.tsx  SensorChart.tsx
homeguard-platform/apps/web/src/components/layout/: Header.tsx  Sidebar.tsx
homeguard-platform/apps/web/src/components/ui/: button.tsx  card.tsx
homeguard-platform/apps/web/src/hooks/: useWebSocket.ts
homeguard-platform/apps/web/src/stores/: useRobotStore.ts  useSensorStore.ts
homeguard-platform/docs/: ARCHITECTURE.md  DEPLOYMENT.md
homeguard-platform/infrastructure/docker/: Dockerfile.api  Dockerfile.web
homeguard-platform/infrastructure/kubernetes/: api-deployment.yaml  ingress.yaml  secrets.yaml  web-deployment.yaml
homeguard-platform/infrastructure/nginx/: nginx.conf
homeguard-platform/runtest/: package.json  test-esp32.js  test-webclient.html
homeguard-platform/scripts/: deploy.sh  setup.sh
homeguard-platform/services/ai-engine-adapter/: README.md  package.json
homeguard-platform/services/ai-engine-adapter/src/: .env.example  index.ts  message-parser.ts  websocket-client.ts
old/zNháp/: CẤU TRÚC TỐT NHẤT ĐƠN GIẢN  CẤU TRÚC WEB TỐT NHẤT.txt
