[tool.poetry]
name = "ai-engine"
version = "0.1.0"
description = "AI Engine for Robot with Vision, Audio, and NLP capabilities"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
# Core
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"
python-dotenv = "^1.0.0"
pyyaml = "^6.0.1"


# WebSocket & Networking
websockets = "^12.0"
aiohttp = "^3.9.0"

# Web Framework (optional, for debugging)
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.25.0"}

# Database & Cache
redis = "^5.0.1"
sqlalchemy = "^2.0.23"

# Utilities
loguru = "^0.7.2"
tenacity = "^8.2.3"  # Retry logic
asyncio = "^3.4.3"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"
pytest-cov = "^4.1.0"
black = "^23.12.0"
isort = "^5.13.0"
flake8 = "^7.0.0"
mypy = "^1.7.0"
ipython = "^8.18.0"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py310']

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"